--- a/wwwRoot/web.config
+++ b/wwwRoot/web.config
@@ -26,5 +26,8 @@
             <error statusCode="501" prefixLanguageFilePath="" path="C:\Inetpub\vhosts\diversitygallerystl.com\error_docs\not_implemented.html" />
             <error statusCode="502" prefixLanguageFilePath="" path="C:\Inetpub\vhosts\diversitygallerystl.com\error_docs\bad_gateway.html" />
         </httpErrors>
+        <staticContent>
+            <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" />
+        </staticContent>
     </system.webServer>
 </configuration>
