--- a/wwwRoot/.user.ini
+++ b/wwwRoot/.user.ini
@@ -1,3 +1,4 @@
 [PHP]
+error_reporting=22519
 open_basedir="C:/Inetpub/vhosts/diversitygallerystl.com\;C:\Windows\Temp\"
 error_log="C:\Inetpub\vhosts\diversitygallerystl.com\logs\php_errors\diversitygallerystl.com\php_error.log"
