Values from new server

--- a/wwwRoot/web.config
+++ b/wwwRoot/web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <configuration>
   <system.webServer>
     <httpErrors>
@@ -51,8 +51,16 @@
         <remove name="X-Powered-By-Plesk" />
       </customHeaders>
     </httpProtocol>
-		<staticContent>
-			<clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="364.00:00:00" />
-		</staticContent>
+    <staticContent>
+      <clientCache cacheControlCustom="public" cacheControlMode="UseMaxAge" cacheControlMaxAge="364.00:00:00" />
+    </staticContent>
+    <tracing>
+      <traceFailedRequests>
+        <clear />
+      </traceFailedRequests>
+    </tracing>
   </system.webServer>
+  <system.web>
+    <compilation tempDirectory="C:\Inetpub\vhosts\diversitygallerystl.com\tmp" />
+  </system.web>
 </configuration>
