--- a/wwwRoot/.user.ini
+++ b/wwwRoot/.user.ini
@@ -1,4 +1,7 @@
 [PHP]
-error_reporting=22519
 open_basedir="C:/Inetpub/vhosts/diversitygallerystl.com\;C:\Windows\Temp\"
+error_reporting=22519
+post_max_size=16M
+upload_max_filesize=16M
+date.timezone="America/Chicago"
 error_log="C:\Inetpub\vhosts\diversitygallerystl.com\logs\php_errors\diversitygallerystl.com\php_error.log"
