--- a/wwwRoot/web.config
+++ b/wwwRoot/web.config
@@ -34,20 +34,38 @@
     <httpProtocol>
       <customHeaders>
         <!-- SECURITY HEADERS - https://securityheaders.io/? -->
-        <!-- Protects against Clickjacking attacks. ref.: https://www.owasp.org/index.php/HTTP_Strict_Transport_Security_Cheat_Sheet -->
-        <!-- <add name="Strict-Transport-Security" value="max-age=31536000; includeSubDomains"/> -->
-        <!-- Protects against XSS injections. ref.: https://www.veracode.com/blog/2014/03/guidelines-for-setting-security-headers/ -->
-        <add name="X-XSS-Protection" value="1; mode=block" />
-        <!-- Protects against MIME-type confusion attack. ref.: https://www.veracode.com/blog/2014/03/guidelines-for-setting-security-headers/ -->
-        <add name="X-Content-Type-Options" value="nosniff" />
-        <!-- Protects against clickjacking attacks. (Modern protection) https://stackoverflow.com/a/47947345/10028768 -->
-        <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy/frame-ancestors -->
-        <add name="Content-Security-Policy" value="default-src: https:; frame-ancestors 'self';" />
-        <!-- Prevents from leaking referrer data over insecure connections. ref.: https://scotthelme.co.uk/a-new-security-header-referrer-policy/ -->
-        <add name="Referrer-Policy" value="strict-origin" />
-        <!-- Remove Powered-By headers -->
         <remove name="X-Powered-By" />
         <remove name="X-Powered-By-Plesk" />
+        <!-- Prevents from leaking referrer data over insecure connections. ref.: https://scotthelme.co.uk/a-new-security-header-referrer-policy/ -->
+        <add name="Referrer-Policy" value="strict-origin" />
+        <!-- Protects against MIME-type confusion attack. ref.: https://www.veracode.com/blog/2014/03/guidelines-for-setting-security-headers/ -->
+        <add name="X-Content-Type-Options" value="nosniff" />
+        <!-- CSP modern XSS directive-based defence, used since 2014. ref.: http://content-security-policy.com/ -->
+        <!-- <add name="Content-Security-Policy" value="default-src 'self' cdnjs.cloudflare.com cdn.jsdelivr.net www.google.com; font-src *;img-src * data:; script-src *; style-src *;" />-->
+        <!-- CSP replace X-Frame-Options to block resources from being loaded and clickjacking -->
+        <!-- <add name="Content-Security-Policy" value="script-src 'self' 'unsafe-inline' https://tagmanager.google.com/ https://www.googletagmanager.com/ https://use.fontawesome.com;style-src 'self' 'unsafe-inline' https://tagmanager.google.com/ https://fonts.googleapis.com/ https://use.fontawesome.com; img-src www.googletagmanager.com; font-src 'self' https://use.fontawesome.com;" /> -->
+        <!-- Protects against clickjacking attacks. (Modern protection) https://stackoverflow.com/a/47947345/10028768 -->
+        <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Content-Security-Policy/frame-ancestors -->
+        <!-- <add name="X-XSS-Protection" value="1; mode=block" /> -->
+        <add name="X-XSS-Protection" value="0" />
+        <add name="Content-Security-Policy" value="
+          base-uri 'self';
+          font-src *;
+          frame-ancestors 'self';
+          img-src * data:;
+          media-src *;
+          object-src 'none';
+          "
+        />
+        <add name="Content-Security-Policy-Report-Only" value="
+          base-uri 'self';
+          font-src *;
+          frame-ancestors 'self';
+          img-src https: data:;
+          media-src *;
+          object-src 'none';
+          "
+        />
       </customHeaders>
     </httpProtocol>
     <staticContent>
